completed home page

--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
          <div><h4><a href="">EXPLORE</a></h4></div>
          <div><h4><a href="./pages/about.html">ABOUT</a></h4></div>
          <div><h4><a href="">WORKS</a></h4></div>
-         <div><h4><a href=".hero">GO TO TOP</a></h4></div>
+         <div><h4><a href="#hero">GO TO TOP</a></h4></div>
          
         </div>
       </div>
