--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         </div>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="./pages/projects.html">Projects</a></li>
                 <li><a href="./pages/about.html">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./pages/ContactUs.html">Contact</a></li>
                 <li>
                     <a href="#"><i class="fa fa-facebook"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
@@ -734,11 +734,11 @@
         </div>
         <hr>
         <div class="flex">
-         <div><h4><a href="#">Blogs</a></h4></div>
-         <div><h4><a href="">cost Estimator</a></h4></div>
-         <div><h4><a href="">Material Estimator</a></h4></div>
-         <div><h4><a href="">plans and designs </a></h4></div>
-         <div><h4><a href="">carers</a></h4></div>
+         <div><h4><a href="./pages/blogs.html">Blogs</a></h4></div>
+         <div><h4><a href="./pages/costEstimator.html">cost Estimator</a></h4></div>
+         <div><h4><a href="./pages/MaterialEstimator.html">Material Estimator</a></h4></div>
+         <div><h4><a href="./pages/Plans&Designs.html">plans and designs </a></h4></div>
+         <div><h4><a href="./pages/carier.html">carers</a></h4></div>
         <a href="#hero"> <div class="top"> 
         </div>
          </a>
