made all the html boiler pltes

--- a/pages/costEstimator.html
+++ b/pages/costEstimator.html
@@ -118,7 +118,7 @@
    <div><h4><a href="./MaterialEstimator.html">Material Estimator</a></h4></div>
    <div><h4><a href="./Plans&Designs.html">plans and designs </a></h4></div>
    <div><h4><a href="./carier.html">carers</a></h4></div>
-  <a href="#hero"> <div class="top"> 
+  <a href="#hero"> <div class="top"> <img src="../assets/img/imgTop.png" alt="">
   </div>
    </a>
    
