--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
          <div><h4><a href="./pages/MaterialEstimator.html">Material Estimator</a></h4></div>
          <div><h4><a href="./pages/Plans&Designs.html">plans and designs </a></h4></div>
          <div><h4><a href="./pages/carier.html">carers</a></h4></div>
-        <a href="#hero"> <div class="top"> 
+        <a href="#hero"> <div class="top"> <img src="./assets/img/imgTop.png" alt="">
         </div>
          </a>
          
