--- a/pages/about.html
+++ b/pages/about.html
@@ -170,7 +170,7 @@
          <div><h4><a href="./MaterialEstimator.html">Material Estimator</a></h4></div>
          <div><h4><a href="./Plans&Designs.html">plans and designs </a></h4></div>
          <div><h4><a href="./carier.html">carers</a></h4></div>
-        <a href="#hero"> <div class="top"> 
+        <a href="#hero"> <div class="top"> <img src="../assets/img/imgTop.png" alt="">
         </div>
          </a>
          
@@ -179,12 +179,20 @@
       
     </section>
 
-      <!--  -->
+      <!-- js bundles -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
+      <!--js  -->
+
       <script>
         // 
         var swiper = new Swiper(".mySwiper", {
+          centeredSlides: true,
+    autoplay: {
+      delay: 2400,
+      disableOnInteraction: false,
+    },
     pagination: {
       el: ".swiper-pagination",
       clickable: true,
@@ -192,6 +200,7 @@
         return '<span class="' + className + '">' + (index + 1) + "</span>";
       },
     },
+
   });
       </script>
 </body>
