--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   </li>
 								<li class="active"><a href="index.html">Home</a></li>
 								<li><a href="./pages/about.html">About Us</a></li>
-								<li><a href="./pages/services.html">Services</a></li>
+								<li><a href="./pages/materialCalculator&CostEstimator.html">Estimator & Calculator</a></li>
 								<li><a href="./pages/marketing.html">Marketing</a></li>
 								<li><a href="./pages/contact.html">Contact</a></li>
 								<div class="clear"></div>
