--- a/pages/blogs&artical.html
+++ b/pages/blogs&artical.html
@@ -15,24 +15,31 @@
 </head>
 <body>
 	      <div class="header">
-	      	<div class="header_top">
-			        <div class="wrap">	 
-					<div class="logo">
-					  <a href="../index.html"><img src="../images/logo.png" alt="" /></a>
+			<div class="header_top">
+				<div class="wrap">	 
+				<div class="logo">
+				   <a href="index.html"><img src="images/logo.png" alt="" /></a>
+				</div>
+					 <div class="menu">
+						<ul>
+			  <li>
+				<select id="city" class="city">
+				  <option value="" selected disabled>Select location</option>
+				  <option value="Deoghar">Deoghar</option>
+				  <option value="Jharkhand ">Jharkhand </option>
+				</select>
+			  </li>
+							<li ><a href="../index.html">Home</a></li>
+							<li ><a href="#">About Us</a></li>
+							<li><a href="./materialCalculator&CostEstimator.html">Estimator & Calculator</a></li>
+							<li class="active"><a href="./blogs&artical.html">Blogs</a></li>
+							<li><a href="./contact.html">Contact</a></li>
+							<div class="clear"></div>
+						</ul>       
 					</div>
-						 <div class="menu">
-						    <ul>
-								<li ><a href="../index.html">Home</a></li>
-								<li><a href="about.html">About Us</a></li>
-								<li><a href="services.html">Services</a></li>
-								<li class="active"><a href="marketing.html">Marketing</a></li>
-								<li><a href="contact.html">Contact</a></li>
-								<div class="clear"></div>
-					        </ul>       
-						</div>
-						<div class="clear"></div>
-				   </div>
-			</div>			     
+					<div class="clear"></div>
+			   </div>
+			 </div>		     
 		</div>
 	  <div class="main">  
 	   <div class="wrap">  		 	       
@@ -72,22 +79,27 @@
     				</div>
     		<div class="sidebar">
 	          <div class="sidebar_left_top">
-	      	     <div class="services">
-	      			<h3>Services</h3>
-				      	<div class="services_list">
-				      		<ul>
-						  		<li><a href="#">Lorem ipsum dolor sit</a></li>
-						  		<li><a href="#">Duis aute irure dolor</a></li>
-						  		<li><a href="#">Sunt in culpa qui officia</a></li>
-						  		<li><a href="#">vel illum qui dolorem eum</a></li>
-						  		<li><a href="#">The wise man therefore</a></li>
-						  		<li><a href="#">Sunt in culpa qui officia</a></li>
-						  		<li><a href="#">Duis aute irure dolor</a></li>
-						  		<li><a href="#">Sunt in culpa qui officia</a></li>
-						  		<li><a href="#">Duis aute irure dolor</a></li>
-				    		</ul>
-				      </div>
-	   			</div>
+				<div class="services">
+					<h3>Services</h3>
+						<div class="services_list">
+							<ul>
+				  <li>
+					<details>
+					<summary>House Construction</summary>
+					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic neque itaque iusto a harum ullam earum blanditiis laboriosam esse accusamus fugit, perferendis facilis similique reprehenderit ea dicta. Ab, nam unde.</p>
+				  </details>
+				</li>
+				<li>
+				  <details class="latestnews_desc">
+				  <summary>construction for Business</summary>
+				  <img src="./images/marketing_img2.jpg" alt="">
+				  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic neque itaque iusto a harum ullam earum blanditiis laboriosam esse accusamus fugit, perferendis facilis similique reprehenderit ea dicta. Ab, nam unde.</p>
+				</details>
+			  </li>
+							
+						  </ul>
+					</div>
+				 </div>
 	 		</div>
 	    		 <div class="sidebar_left_bottom">
 			    	<div class="projects">
