--- a/pages/about.html
+++ b/pages/about.html
@@ -26,24 +26,31 @@
 </head>
 <body>
 	      <div class="header">
-	      	<div class="header_top">
-			        <div class="wrap">	 
-					<div class="logo">
-					   <a href="index.html"><img src="../images/logo.png" alt="" /></a>
+			<div class="header_top">
+				<div class="wrap">	 
+				<div class="logo">
+				   <a href="index.html"><img src="images/logo.png" alt="" /></a>
+				</div>
+					 <div class="menu">
+						<ul>
+			  <li>
+				<select id="city" class="city">
+				  <option value="" selected disabled>Select location</option>
+				  <option value="Deoghar">Deoghar</option>
+				  <option value="Jharkhand ">Jharkhand </option>
+				</select>
+			  </li>
+							<li ><a href="../index.html">Home</a></li>
+							<li class="active"><a href="#">About Us</a></li>
+							<li><a href="./materialCalculator&CostEstimator.html">Estimator & Calculator</a></li>
+							<li><a href="./blogs&artical.html">Blogs</a></li>
+							<li><a href="./contact.html">Contact</a></li>
+							<div class="clear"></div>
+						</ul>       
 					</div>
-						 <div class="menu">
-						    <ul>
-								<li ><a href="../index.html">Home</a></li>
-								<li class="active"><a href="about.html">About Us</a></li>
-								<li><a href="services.html">Services</a></li>
-								<li><a href="marketing.html">Marketing</a></li>
-								<li><a href="contact.html">Contact</a></li>
-								<div class="clear"></div>
-					        </ul>       
-						</div>
-						<div class="clear"></div>
-				   </div>
-		      </div>	
+					<div class="clear"></div>
+			   </div>
+			 </div>
 			  <!------ Slider ------------>
 		  <div class="slider">
 			<div class="slider-wrapper theme-default">
