--- a/pages/materialCalculator&CostEstimator.html
+++ b/pages/materialCalculator&CostEstimator.html
@@ -6,18 +6,30 @@
 <link href="../css/style.css" rel="stylesheet" type="text/css" media="all"/>
 <!-- font -->
 <script src="https://kit.fontawesome.com/e962f2728f.js" crossorigin="anonymous"></script>
-<!-- swiper -->
+<!-- jquery -->
+<script type="text/javascript" src="../js/jquery-1.9.0.min.js"></script>
+<script type="text/javascript" src="../js/jquery.nivo.slider.js"></script>
+
+<!-- swiper css -->
 <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
 />
+<!-- swiper js  -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+<!--sweet alerts css -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.7.27/sweetalert2.css" integrity="sha512-eRBMRR/qeSlGYAb6a7UVwNFgXHRXa62u20w4veTi9suM2AkgkJpjcU5J8UVcoRCw0MS096e3n716Qe9Bf14EyQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!--sweet alert js  -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.7.27/sweetalert2.min.js" integrity="sha512-mJQ9oQHzLM2zXe1cwiHmnMddNrmjv1YlaKZe1rM4J7q8JTnNn9UgeJVBV9jyV/lVGdXymVx6odhgwNZjQD8AqA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+
 </head>
 <body>
 	      <div class="header">
 			<div class="header_top">
 				<div class="wrap">	 
 				<div class="logo">
-				   <a href="index.html"><img src="images/logo.png" alt="" /></a>
+				   <a href="index.html"><img src="../images/logo.png" alt="" /></a>
 				</div>
 					 <div class="menu">
 						<ul>
@@ -357,9 +369,9 @@
 		 
  </div>	
  
- <!--  -->
- <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
  
+ <!--  -->
+ <script src="../js/forms.js"></script>
  <!--  -->
  <script>
 
