--- a/pages/contact.html
+++ b/pages/contact.html
@@ -61,13 +61,14 @@
 				 <li>
 				   <details>
 				   <summary>House Construction</summary>
+				   <img src="../images/building1.jpg" alt="">
 				   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic neque itaque iusto a harum ullam earum blanditiis laboriosam esse accusamus fugit, perferendis facilis similique reprehenderit ea dicta. Ab, nam unde.</p>
 				 </details>
 			   </li>
 			   <li>
 				 <details class="latestnews_desc">
 				 <summary>construction for Business</summary>
-				 <img src="./images/marketing_img2.jpg" alt="">
+				 <img src="../images/building.jpg" alt="">
 				 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic neque itaque iusto a harum ullam earum blanditiis laboriosam esse accusamus fugit, perferendis facilis similique reprehenderit ea dicta. Ab, nam unde.</p>
 			   </details>
 			 </li>
@@ -158,7 +159,7 @@
 				 		 <div class="contact_info">
 				 		 	<h2>Find Us Here</h2>
 					    	  <div class="map">
-								<iframe width="100%" height="175" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2111.0409974243535!2d86.71610752840866!3d24.496523785216596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f117dc6b99cf05%3A0xe38a6b92edaf802!2sJha%20%26%20Thakur%20Fuel%20Centre!5e0!3m2!1sen!2sin!4v1692460975823!5m2!1sen!2sin" ></iframe><br><small><a href="https://www.google.co.in/maps/place/Jha+%26+Thakur+Fuel+Centre/@24.4965238,86.7161075,17.78z/data=!4m6!3m5!1s0x39f117dc6b99cf05:0xe38a6b92edaf802!8m2!3d24.4964515!4d86.7175598!16s%2Fg%2F11c54n8hbx?hl=en&entry=ttu" style="color:#777;text-align:left;font-size:0.85em">View Larger Map</a></small>
+								<iframe width="100%" height="175" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3630.7195621117808!2d86.7192872!3d24.495171799999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f117e1f0338e41%3A0xee3ca69201c7425f!2sStavya%20Design%20%26%20Construction%20Private%20Limited!5e0!3m2!1sen!2sin!4v1693408741980!5m2!1sen!2sin" ></iframe><br><small><a href="https://www.google.com/maps/place/Stavya+Design+%26+Construction+Private+Limited/@24.4951718,86.7192872,17z/data=!3m1!4b1!4m6!3m5!1s0x39f117e1f0338e41:0xee3ca69201c7425f!8m2!3d24.4951718!4d86.7192872!16s%2Fg%2F11ssx_bw2w?entry=ttu" style="color:#777;text-align:left;font-size:0.85em">View Larger Map</a></small>
 							  </div>
       				</div>
 		      </div>
@@ -202,27 +203,20 @@
 						 </ul>
 				    </div>			
 				</div>
-				  <div class="col_1_of_4 span_1_of_4">
-					<h3>Information</h3>
-					<!-- swiper -->
-          <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <p>we are Going to expand our work in new cities, from 1st September we are expanding our branch to Kolkata and Ranchi.<br><span><a href="#">Read More[....]</a></span></p>
-              </div>
-              <div class="swiper-slide">
-                <p>we are Going to expand our work in new cities, from 1st September we are expanding our branch to Kolkata and Ranchi.<br><span><a href="#">Read More[....]</a></span></p>
-              </div>
-              <div class="swiper-slide">
-                <p>we are Going to expand our work in new cities, from 1st September we are expanding our branch to Kolkata and Ranchi.<br><span><a href="#">Read More[....]</a></span></p>
-              </div>
-              <div class="swiper-slide">
-                <p>we are Going to expand our work in new cities, from 1st September we are expanding our branch to Kolkata and Ranchi.<br><span><a href="#">Read More[....]</a></span></p>
-              </div>
-              <div class="swiper-slide"> <p>we are Going to expand our work in new cities, from 1st September we are expanding our branch to Kolkata and Ranchi.<br><span><a href="#">Read More[....]</a></span></p>
-              </div>
-              
-            </div>
+				<div class="col_1_of_4 span_1_of_4">
+					<h3>site map</h3>
+        <div class="Testimonials_desc">
+            <ul class="address">
+              <li><a href="../index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="blogs&artical.html">Blogs</a></li>
+              <li><a href="materialCalculator&CostEstimator.html">Cost Calculator</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="customers.html">Customers</a></li>
+              <li><a href="careers.html">Careers</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
           </div>
 					
 				  </div>
