--- a/dashboard/customers.html
+++ b/dashboard/customers.html
@@ -16,9 +16,9 @@
         <aside>
             <div class="top">
                 <div class="logo">
-                   <p>C-S</p>
-                    <h2>CITY-<span class="danger" >SHIRT</span></h2>
-                </div>
+                    <img src="../images/footer_logo.png" alt="">
+                     <h2>STAVYA-<span class="danger" >C&D</span></h2>
+                 </div>
                 <div class="close" id="close-btn">
                     <span class="material-symbols-sharp">
                         close
