--- a/pages/floorPlans.html
+++ b/pages/floorPlans.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <head>
-<title>Our Services</title>
+<title>Floor plans</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="../css/style.css" rel="stylesheet" type="text/css" media="all"/>
@@ -58,8 +58,8 @@
 								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
 									<a class="nav-link" href="./projects.html">Our Projects</a>
 								</li>
-								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-									<a class="nav-link" href="./floorPlans.html">Floor plans</a>
+								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
+									<a class="nav-link " href="./floorPlans.html">Floor plans</a>
 								</li>
                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
 									<a class="nav-link" href="./materialCalculator&CostEstimator.html">Cost Estimator</a>
@@ -68,7 +68,7 @@
 									<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="true">More</a>
 									<div class="dropdown-menu">
 										<a class="dropdown-item" href="./about.html">About</a>
-										<a class="dropdown-item" href="./blogs&artical.html">Blogs</a>
+										<a class="dropdown-item " href="./blogs&artical.html">Blogs</a>
 										<a class="dropdown-item" href="./services.html">Services</a>
 										<a class="dropdown-item" href="./customers.html">Customers</a>
 									</div>
@@ -93,124 +93,77 @@
 	   <div class="wrap">  		 	       
          <div class="services_grid">
 		      <div class="content_bottom">
-		      	<div class="section group service_desc">
-				<div class="listview_1_of_2 images_1_of_2">
-					<div class="listimg listimg_2_of_1">
-						  <img src="../images/service-1.png" alt="" />
+		         			<div class="image group marketing">
+									<div class="grid images_3_of_1">
+										<a href="#"><img src="../images/marketing_img1.jpg" alt=""></a>
+									</div>
+										<div class="grid blog-desc">
+											<h4><a href="#">Lorem Ipsum is simply dummy text </a></h4>
+											<p>Lorem ipsum dolor sit amet Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+											<div class="view-all"><a href="events.html">More Info</a></div>
+									 </div>
+		  				      </div>
+		  				   <div class="image group marketing">
+									<div class="grid images_3_of_1">
+										<a href="#"><img src="../images/marketing_img2.jpg" alt=""></a>
+									</div>
+										<div class="grid blog-desc">
+											<h4><a href="#">Duis aute irure dolor </a></h4>
+											   <p>Lorem ipsum dolor sit amet Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+											<div class="view-all"><a href="events.html">More Info</a></div>
+									 </div>
+		  				      </div>
+		  				   <div class="image group marketing">
+									<div class="grid images_3_of_1">
+										<a href="#"><img src="../images/marketing_img3.jpg" alt=""></a>
+									</div>
+										<div class="grid blog-desc">
+											<h4><a href="#">Deserunt mollit laborum</a></h4>
+											   <p>Lorem ipsum dolor sit amet Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+											<div class="view-all"><a href="events.html">More Info</a></div>
+									 </div>
+		  				      </div>
+		      			 </div>
+    				</div>
+    		<div class="sidebar">
+				<div class="sidebar_left_top">
+					<div class="services">
+					   <h3>Services</h3>
+						   <div class="services_list">
+							   <ul>
+					 <li>
+					   <details>
+					   <summary>House Construction</summary>
+					   <img src="../images/building1.jpg" alt="">
+					   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic neque itaque iusto a harum ullam earum blanditiis laboriosam esse accusamus fugit, perferendis facilis similique reprehenderit ea dicta. Ab, nam unde.</p>
+					 </details>
+				   </li>
+				   <li>
+					 <details class="latestnews_desc">
+					 <summary>construction for Business</summary>
+					 <img src="../images/building.jpg" alt="">
+					 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic neque itaque iusto a harum ullam earum blanditiis laboriosam esse accusamus fugit, perferendis facilis similique reprehenderit ea dicta. Ab, nam unde.</p>
+				   </details>
+				 </li>
+							   
+							 </ul>
+					   </div>
 					</div>
-				    <div class="text list_2_of_1">
-						<h4>Service - 01</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt  ut labore et dolore.Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-						<div class="view-all"><a href="events.html">More Info</a></div>
-				   </div>
-			   </div>			
-				<div class="listview_1_of_2 images_1_of_2">
-					<div class="listimg listimg_2_of_1">
-						  <img src="../images/service-2.png" alt="" />
-					</div>
-					<div class="text list_2_of_1">
-						  <h4>Service - 02</h4>
-						  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt  ut labore et dolore.Lorem ipsum dolor sit amet  sed do eiusmod tempor incididunt ut labore.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-						 <div class="view-all"><a href="events.html">More Info</a></div>
-					</div>
-				</div>
-			</div>
-			<div class="section group service_desc">
-				<div class="listview_1_of_2 images_1_of_2">
-					<div class="listimg listimg_2_of_1">
-						  <img src="../images/service-3.png" alt="" />
-					</div>
-				    <div class="text list_2_of_1">
-						<h4>Service - 01</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt  ut labore et dolore.Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-						<div class="view-all"><a href="events.html">More Info</a></div>
-				   </div>
-			   </div>			
-				<div class="listview_1_of_2 images_1_of_2">
-					<div class="listimg listimg_2_of_1">
-						  <img src="../images/service-4.png" alt="" />
-					</div>
-					<div class="text list_2_of_1">
-						  <h4>Service - 02</h4>
-						  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt  ut labore et dolore.Lorem ipsum dolor sit amet  sed do eiusmod tempor incididunt ut labore.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-						 <div class="view-all"><a href="events.html">More Info</a></div>
-					</div>
-				</div>
-			</div>
-			<div class="section group service_desc">
-				<div class="listview_1_of_2 images_1_of_2">
-					<div class="listimg listimg_2_of_1">
-						  <img src="../images/service-5.png" alt="" />
-					</div>
-				    <div class="text list_2_of_1">
-						<h4>Service - 01</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt  ut labore et dolore.Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-						<div class="view-all"><a href="events.html">More Info</a></div>
-				   </div>
-			   </div>			
-				<div class="listview_1_of_2 images_1_of_2">
-					<div class="listimg listimg_2_of_1">
-						  <img src="../images/service-6.png" alt="" />
-					</div>
-					<div class="text list_2_of_1">
-						  <h4>Service - 02</h4>
-						  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt  ut labore et dolore.Lorem ipsum dolor sit amet  sed do eiusmod tempor incididunt ut labore.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-						 <div class="view-all"><a href="events.html">More Info</a></div>
-					</div>
-				</div>
-			</div>
-		   </div>
-    	</div>
-    <div class="sidebar">
-        <div class="sidebar_right_top">
-     	  <h3>Latest News</h3>
-     	   <div class="latestnews">
-		     <div class="latestnews_desc">
-		     	<h4>Jan 15, 2012</h4>
-		     	<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-		     	<span><a href="#">read more</a></span>
-		     </div>
-		     	 <div class="latestnews_desc">
-		     		<h4>Jan 20, 2013</h4>
-		     		<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-		     		<span><a href="#">read more</a></span>
-		     	</div>
-		     	<div class="view-all"><a href="events.html">ViewAll</a></div>
-          </div>	
-        </div>
-        <div class="sidebar_right_bottom">
-        	<h3>Free consultation</h3>
-        	<div class="login_form">        		
-        		<form>
-					<div>
-					  <span><label>Name</label></span>
-					  <span><input name="userName" type="text" class="textbox"></span>
-					</div>
-					<div>
-					  <span><label>Email</label></span>
-					  <span><input name="userEmail" type="email"></span>
-					</div>
-			  <div>
-			   <span><label>Phone</label></span>
-			   <span><input name="userPhone" type="number"></span>
-			   </div>
-			   <div>
-				 <span><label>Location</label></span>
-				 <span><input name="userlocation" type="text"></span>
-				 </div>
-					 <div>
-						<span><input type="submit" class="mybutton" value="submit"></span>
-					 </div>
-					 <!-- <span>Submit this form we will call you soon</span> -->
-				 </form>
-						<!-- <h4>we will call you soon </h4> -->
-        	</div>
-         </div>
-       </div>
+			  </div>
+	    		 <div class="sidebar_left_bottom">
+			    	<div class="projects">
+			    		<h3>Projects</h3>
+			    		<div class="project_img">
+				    	   <img src="../images/project1.jpg">
+				    	   <img src="../images/project2.jpg">
+				    	    <div class="view-all"><a href="events.html">See All</a></div>
+			    	   </div>
+			    	</div>
+	    		</div>
+	  		</div> 
     <div class="clear"></div>
  </div>
 </div>
-
 <div class="footer">
 	<div class="wrap">
 	   <div class="section group">
@@ -229,7 +182,7 @@
 				</div>
 				<div class="col_1_of_4 span_1_of_4">
 					<h3>site map</h3>
-        <div class="Testimonials_desc">
+           <div class="Testimonials_desc">
             <ul class="address">
               <li><a href="../index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
@@ -268,8 +221,7 @@
         <h5>- Angel</h5></div>
       <div class="swiper-slide"> <p> best construction work we will love to hear more amazing plans
       </p>
-        <h5>- Rajneesh</h5>
-	</div>
+        <h5>- Rajneesh</h5></div>
       
     </div>
   </div>
@@ -301,7 +253,6 @@
  
  <!--  -->
  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
- <!--  -->
  <script src="../js/forms.js"></script>
  <!--  -->
  <script>
@@ -313,10 +264,10 @@
       delay: 2500,
       disableOnInteraction: false
     },
-    // pagination: {
-    //   el: ".swiper-pagination",
-    //   clickable: true
-    // },
+    pagination: {
+      el: ".swiper-pagination",
+      clickable: true
+    },
   
   });
 
@@ -325,4 +276,3 @@
  </script>
 </body>
 </html>
-
